[gd_scene load_steps=5 format=3 uid="uid://iwm7wy12qdu1"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_v5ygo"]
[ext_resource type="PackedScene" uid="uid://brppovmkem038" path="res://suite_option.tscn" id="2_c5g1y"]
[ext_resource type="Texture2D" uid="uid://bdm1njhkxoco7" path="res://assets/Backgrounds/Selectscreen.png" id="2_pjfhq"]
[ext_resource type="AudioStream" uid="uid://6xiv3uxes1pn" path="res://assets/Music/Title_Screen_Alt.mp3" id="4_fvefe"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5ygo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_pjfhq")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.5
offset_top = 100.0
offset_right = 75.5
offset_bottom = 126.0
grow_horizontal = 2
text = "Choose your setup!"

[node name="Play Game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -90.0
offset_right = 45.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
text = "Play Game"

[node name="Selection Wrapper" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Class Selection" type="VBoxContainer" parent="Selection Wrapper"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
alignment = 1

[node name="Thief Option" parent="Selection Wrapper/Class Selection" instance=ExtResource("2_c5g1y")]
layout_mode = 2
toggle_mode = true
text = "Thief"

[node name="HSpacer" type="Control" parent="Selection Wrapper/Class Selection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Priest Option" parent="Selection Wrapper/Class Selection" instance=ExtResource("2_c5g1y")]
layout_mode = 2
toggle_mode = true
text = "Priest"

[node name="VSpacer" type="Control" parent="Selection Wrapper"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Weapon Selection" type="VBoxContainer" parent="Selection Wrapper"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
alignment = 1

[node name="Longblade Option" parent="Selection Wrapper/Weapon Selection" instance=ExtResource("2_c5g1y")]
layout_mode = 2
toggle_mode = true
text = "Longblade
"

[node name="HSpacer" type="Control" parent="Selection Wrapper/Weapon Selection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Mace Option" parent="Selection Wrapper/Weapon Selection" instance=ExtResource("2_c5g1y")]
layout_mode = 2
toggle_mode = true
text = "Mace
"

[node name="VSpacer2" type="Control" parent="Selection Wrapper"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Armor Selection" type="VBoxContainer" parent="Selection Wrapper"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
alignment = 1

[node name="Heavy Armor Option" parent="Selection Wrapper/Armor Selection" instance=ExtResource("2_c5g1y")]
layout_mode = 2
toggle_mode = true
text = "Heavy Armor"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fvefe")
autoplay = true

[connection signal="pressed" from="Play Game" to="." method="_on_play_game_pressed"]
[connection signal="toggled" from="Selection Wrapper/Class Selection/Thief Option" to="." method="_on_thief_option_toggled"]
[connection signal="toggled" from="Selection Wrapper/Class Selection/Priest Option" to="." method="_on_priest_option_toggled"]
[connection signal="toggled" from="Selection Wrapper/Weapon Selection/Longblade Option" to="." method="_on_longblade_option_toggled"]
[connection signal="toggled" from="Selection Wrapper/Weapon Selection/Mace Option" to="." method="_on_mace_option_toggled"]
[connection signal="toggled" from="Selection Wrapper/Armor Selection/Heavy Armor Option" to="." method="_on_heavy_armor_option_toggled"]
